--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "eslint-config-prettier": "^10.1.8",
         "eslint-plugin-prettier": "^5.5.4",
         "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react-refresh": "^0.4.20",
         "msw": "^2.0.11",
         "postcss": "^8.4.32",
         "prettier": "^3.6.2",
